# integ

./: .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  integ.db  pyproject.toml
.github/: copilot-instructions.md
backend/: __init__.py  config.py  main.py
backend/api/: __init__.py  auth.py
backend/auth/: __init__.py  jwt.py  steam.py
backend/models/: __init__.py  user.py
backend/services/: __init__.py
frontend/: __init__.py  api_client.py  main.py
